# outlay

./: manage.py  pyproject.toml
.github/workflows/: django-test.yaml
historian/: models.py  tests.py  urls.py  views.py
historian/migrations/: 0001_initial.py
historian/templates/historian/: tag_list.html
outlay/: asgi.py  settings.py  urls.py  wsgi.py
